For the section link tabs, rather than have all margin spacing on the left, split them in half for both left & right. That way, the list of link tabs are centered aligning correctly with the above header.
This impacts the alignment of the header and list of link tabs in:
Who We Are
- Why Us
Career
- Why Us
- Open Roles

--- a/src/style.css
+++ b/src/style.css
@@ -926,7 +926,8 @@ p {
   border-bottom: 2px solid transparent; /* Default state with no underline */
   background-color: transparent;
   transition: border-color 0.3s ease-in-out, color 0.3s ease-in-out;
-  margin-left: 5rem;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
   border-bottom: 2px solid #4746468f;
   border-radius: 0px;
 }
